--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "ilzrv/laravel-steam-auth": "^2.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "xpaw/php-source-query-class": "^2.1"
