--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ilzrv/laravel-steam-auth": "^2.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "paquettg/php-html-parser": "^3.1",
         "xpaw/php-source-query-class": "^2.1"
     },
     "require-dev": {
